py_parser/helloParser.py
# Generated from C:/Users/14908/Desktop/PPCA/Compiler\hello.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class helloParser ( Parser ):

    grammarFileName = "hello.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'['", "']'", "'='", "'++'", 
                     "'--'", "'!'", "'~'", "'**'", "'<<'", "'>>'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'&'", "'^'", 
                     "'|'", "'&&'", "'||'", "'?'", "':'", "'('", "')'", 
                     "'.'", "'{'", "'}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'bool'", "'int'", "'void'", "'string'", "'if'", "'else'", 
                     "'new'", "'class'", "'true'", "'false'", "'null'", 
                     "'this'", "'for'", "'while'", "'break'", "'continue'", 
                     "'return'", "'*'", "'/'", "'%'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LineComment", 
                      "BlockComment", "Interger", "BOOL", "INT", "VOID", 
                      "STRING", "IF", "ELSE", "NEW", "CLASS", "TRUE", "FALSE", 
                      "NULL", "THIS", "FOR", "WHILE", "BREAK", "CONTI", 
                      "RET", "MUL", "DIV", "MOD", "ADD", "SUB", "Identifier", 
                      "String", "WS" ]

    RULE_body = 0
    RULE_declaration = 1
    RULE_variabledeclaration = 2
    RULE_typename = 3
    RULE_easytype = 4
    RULE_initialize = 5
    RULE_expression = 6
    RULE_newexpression = 7
    RULE_newtypename = 8
    RULE_bracketwithargs = 9
    RULE_bracketwithoutargs = 10
    RULE_constexpression = 11
    RULE_lhsexpression = 12
    RULE_funcarglist = 13
    RULE_classdeclaration = 14
    RULE_classFuncdeclar = 15
    RULE_classConstructFunc = 16
    RULE_blockStatement = 17
    RULE_functiondeclaration = 18
    RULE_funcarglistDec = 19
    RULE_funcparam = 20
    RULE_statement = 21
    RULE_branchStatement = 22
    RULE_loopStatement = 23
    RULE_emptyStatement = 24

    ruleNames =  [ "body", "declaration", "variabledeclaration", "typename", 
                   "easytype", "initialize", "expression", "newexpression", 
                   "newtypename", "bracketwithargs", "bracketwithoutargs", 
                   "constexpression", "lhsexpression", "funcarglist", "classdeclaration", 
                   "classFuncdeclar", "classConstructFunc", "blockStatement", 
                   "functiondeclaration", "funcarglistDec", "funcparam", 
                   "statement", "branchStatement", "loopStatement", "emptyStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    LineComment=31
    BlockComment=32
    Interger=33
    BOOL=34
    INT=35
    VOID=36
    STRING=37
    IF=38
    ELSE=39
    NEW=40
    CLASS=41
    TRUE=42
    FALSE=43
    NULL=44
    THIS=45
    FOR=46
    WHILE=47
    BREAK=48
    CONTI=49
    RET=50
    MUL=51
    DIV=52
    MOD=53
    ADD=54
    SUB=55
    Identifier=56
    String=57
    WS=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(helloParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(helloParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(helloParser.DeclarationContext,i)


        def getRuleIndex(self):
            return helloParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = helloParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 72060050759221248) != 0):
                self.state = 50
                self.declaration()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(helloParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return helloParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncDeclarContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functiondeclaration(self):
            return self.getTypedRuleContext(helloParser.FunctiondeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDeclar" ):
                listener.enterFuncDeclar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDeclar" ):
                listener.exitFuncDeclar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclar" ):
                return visitor.visitFuncDeclar(self)
            else:
                return visitor.visitChildren(self)


    class ClassDeclarContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def classdeclaration(self):
            return self.getTypedRuleContext(helloParser.ClassdeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclar" ):
                listener.enterClassDeclar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclar" ):
                listener.exitClassDeclar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclar" ):
                return visitor.visitClassDeclar(self)
            else:
                return visitor.visitChildren(self)


    class VarDeclarContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variabledeclaration(self):
            return self.getTypedRuleContext(helloParser.VariabledeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclar" ):
                listener.enterVarDeclar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclar" ):
                listener.exitVarDeclar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclar" ):
                return visitor.visitVarDeclar(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = helloParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = helloParser.VarDeclarContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.variabledeclaration()
                pass

            elif la_ == 2:
                localctx = helloParser.ClassDeclarContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.classdeclaration()
                pass

            elif la_ == 3:
                localctx = helloParser.FuncDeclarContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.functiondeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariabledeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typename(self):
            return self.getTypedRuleContext(helloParser.TypenameContext,0)


        def initialize(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(helloParser.InitializeContext)
            else:
                return self.getTypedRuleContext(helloParser.InitializeContext,i)


        def getRuleIndex(self):
            return helloParser.RULE_variabledeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariabledeclaration" ):
                listener.enterVariabledeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariabledeclaration" ):
                listener.exitVariabledeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariabledeclaration" ):
                return visitor.visitVariabledeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variabledeclaration(self):

        localctx = helloParser.VariabledeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variabledeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.typename(0)
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 64
                    self.initialize()
                    self.state = 65
                    self.match(helloParser.T__0) 
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 72
            self.initialize()
            self.state = 73
            self.match(helloParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return helloParser.RULE_typename

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ArrayCaseContext(TypenameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.TypenameContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typename(self):
            return self.getTypedRuleContext(helloParser.TypenameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayCase" ):
                listener.enterArrayCase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayCase" ):
                listener.exitArrayCase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayCase" ):
                return visitor.visitArrayCase(self)
            else:
                return visitor.visitChildren(self)


    class PrimeCaseContext(TypenameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.TypenameContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def easytype(self):
            return self.getTypedRuleContext(helloParser.EasytypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimeCase" ):
                listener.enterPrimeCase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimeCase" ):
                listener.exitPrimeCase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimeCase" ):
                return visitor.visitPrimeCase(self)
            else:
                return visitor.visitChildren(self)


    class ClassCaseContext(TypenameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.TypenameContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(helloParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassCase" ):
                listener.enterClassCase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassCase" ):
                listener.exitClassCase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassCase" ):
                return visitor.visitClassCase(self)
            else:
                return visitor.visitChildren(self)



    def typename(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = helloParser.TypenameContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_typename, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34, 35, 36, 37]:
                localctx = helloParser.PrimeCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 76
                self.easytype()
                pass
            elif token in [56]:
                localctx = helloParser.ClassCaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 77
                self.match(helloParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 85
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = helloParser.ArrayCaseContext(self, helloParser.TypenameContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_typename)
                    self.state = 80
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 81
                    self.match(helloParser.T__2)
                    self.state = 82
                    self.match(helloParser.T__3) 
                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class EasytypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(helloParser.BOOL, 0)

        def INT(self):
            return self.getToken(helloParser.INT, 0)

        def VOID(self):
            return self.getToken(helloParser.VOID, 0)

        def STRING(self):
            return self.getToken(helloParser.STRING, 0)

        def getRuleIndex(self):
            return helloParser.RULE_easytype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEasytype" ):
                listener.enterEasytype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEasytype" ):
                listener.exitEasytype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEasytype" ):
                return visitor.visitEasytype(self)
            else:
                return visitor.visitChildren(self)




    def easytype(self):

        localctx = helloParser.EasytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_easytype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 257698037760) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id_ = None # Token

        def Identifier(self):
            return self.getToken(helloParser.Identifier, 0)

        def expression(self):
            return self.getTypedRuleContext(helloParser.ExpressionContext,0)


        def getRuleIndex(self):
            return helloParser.RULE_initialize

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitialize" ):
                listener.enterInitialize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitialize" ):
                listener.exitInitialize(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitialize" ):
                return visitor.visitInitialize(self)
            else:
                return visitor.visitChildren(self)




    def initialize(self):

        localctx = helloParser.InitializeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initialize)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            localctx.id_ = self.match(helloParser.Identifier)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 91
                self.match(helloParser.T__4)
                self.state = 92
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return helloParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ConstExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def constexpression(self):
            return self.getTypedRuleContext(helloParser.ConstexpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstExpr" ):
                listener.enterConstExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstExpr" ):
                listener.exitConstExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstExpr" ):
                return visitor.visitConstExpr(self)
            else:
                return visitor.visitChildren(self)


    class PostfixUpdateExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.ExpressionContext
            super().__init__(parser)
            self.lhs = None # ExpressionContext
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(helloParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfixUpdateExpr" ):
                listener.enterPostfixUpdateExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfixUpdateExpr" ):
                listener.exitPostfixUpdateExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixUpdateExpr" ):
                return visitor.visitPostfixUpdateExpr(self)
            else:
                return visitor.visitChildren(self)


    class BinaryExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.ExpressionContext
            super().__init__(parser)
            self.lhs = None # ExpressionContext
            self.op = None # Token
            self.rhs = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(helloParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(helloParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(helloParser.MUL, 0)
        def DIV(self):
            return self.getToken(helloParser.DIV, 0)
        def MOD(self):
            return self.getToken(helloParser.MOD, 0)
        def ADD(self):
            return self.getToken(helloParser.ADD, 0)
        def SUB(self):
            return self.getToken(helloParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryExpr" ):
                listener.enterBinaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryExpr" ):
                listener.exitBinaryExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinaryExpr" ):
                return visitor.visitBinaryExpr(self)
            else:
                return visitor.visitChildren(self)


    class NewExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def newexpression(self):
            return self.getTypedRuleContext(helloParser.NewexpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewExpr" ):
                listener.enterNewExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewExpr" ):
                listener.exitNewExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewExpr" ):
                return visitor.visitNewExpr(self)
            else:
                return visitor.visitChildren(self)


    class PrefixUpdateExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(helloParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixUpdateExpr" ):
                listener.enterPrefixUpdateExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixUpdateExpr" ):
                listener.exitPrefixUpdateExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrefixUpdateExpr" ):
                return visitor.visitPrefixUpdateExpr(self)
            else:
                return visitor.visitChildren(self)


    class LhsExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def lhsexpression(self):
            return self.getTypedRuleContext(helloParser.LhsexpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLhsExpr" ):
                listener.enterLhsExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLhsExpr" ):
                listener.exitLhsExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLhsExpr" ):
                return visitor.visitLhsExpr(self)
            else:
                return visitor.visitChildren(self)


    class ExpExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.ExpressionContext
            super().__init__(parser)
            self.lhs = None # ExpressionContext
            self.op = None # Token
            self.rhs = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(helloParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(helloParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpExpr" ):
                listener.enterExpExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpExpr" ):
                listener.exitExpExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpExpr" ):
                return visitor.visitExpExpr(self)
            else:
                return visitor.visitChildren(self)


    class TriExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a helloParser.ExpressionContext
            super().__init__(parser)
            self.con = None # ExpressionContext
            self.lhs = None # ExpressionContext
            self.rhs = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(helloParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(helloParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriExpr" ):
                listener.enterTriExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriExpr" ):
                listener.exitTriExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTriExpr" ):
                return visitor.visitTriExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryExprContext(ExpressionContext):
